<resources>

    <!-- Aplikasi -->
    <string name="app_name">ScanFood</string>
    <string name="app_desc">Scan - Pilih - Pesan</string>
    <string name="action_settings">Settings</string>
    <string name="header_favorite">FAVORIT</string>
    <string name="header_news">BERITA</string>
    <string name="header_menu">MENU</string>
    <string name="header_order_menu">DETAIL</string>
    <string name="official_email">scanfoodindonesia@gmail.com</string>
    <!-- End Aplikasi -->

    <!-- QR Code Scanner -->
    <string name="qr_code_message">Scan QR Code yang ada di meja</string>
    <string name="txt_info_order">Keterangan</string>
    <string name="disconnected">Disconnected. Please check your internet connection.</string>
    <string name="header_detail_partner">DETAIL</string>
    <!-- End QR Code Scanner -->

    <!-- Informasi Alert -->
    <string name="title_login_failed">Login Gagal</string>
    <string name="btn_ok">OK</string>
    <string name="info_wrong_login">Kombinasi email dan password tidak tepat!</string>
    <string name="info_connect_failed">Gagal terhubung ke server!</string>
    <string name="info_empty_login">Email dan password tidak boleh kosong!</string>
    <string name="title_scan_failed">Gagal Scan</string>
    <string name="info_scan_failed">Login terlebih dahulu untuk melakukan scan QR Code</string>
    <string name="header_order">ORDER</string>
    <string name="btn_cancel">Batal</string>
    <string name="title_pay_success">Memanggil Pelayan</string>
    <string name="info_pay_success">Silahkan menunggu. Pelayan akan mendatangi meja anda</string>
    <string name="title_logout_scan">Keluar</string>
    <string name="info_logout_scan">Tidak dapat keluar, anda belum membayar.</string>
    <string name="title_order_error">Gagal Memilih</string>
    <string name="info_order_error">Sesi pemesanan telah selesai, silahkan bayar dan mulai sesi dengan scan QR Code baru.</string>
    <string name="header_rating">RATING</string>
    <string name="title_review">Review</string>
    <string name="info_review">Apakah anda ingin memberi review?</string>
    <string name="btn_tidak">Tidak</string>
    <string name="btn_ya">Ya</string>
    <string name="header_review">REVIEW</string>
    <string name="inputName">Nama Lengkap</string>
    <string name="inputEmail">Email</string>
    <string name="inputAddress">Alamat</string>
    <string name="inputPass">Password</string>
    <string name="inputPassConf">Konfirmasi Password</string>
    <string name="btn_register">Register</string>
    <string name="header_register">REGISTER</string>
    <string name="title_register_failed">Register Gagal</string>
    <string name="info_register_failed">Form yang di masukkan salah, silahkan periksa kembali</string>
    <string name="header_login">LOGIN</string>
    <string name="btn_login">Login</string>
    <string name="header_profile">PROFILE</string>
    <string name="emailapp">scanfoodapp@gmail.com</string>
    <string name="subject_email">ScanFood Report</string>
    <string name="text_email">Pesan anda...</string>
    <string name="creator_name_1">M Reki Andika</string>
    <string name="creator_univ_1">Universitas Syiah Kuala</string>
    <string name="creator_email_1">rkndika@gmail.com</string>
    <string name="creator_name_2">Farrasa</string>
    <string name="creator_univ_2">Universitas Syiah Kuala</string>
    <string name="creator_email_2">farasa@gmail.com</string>
    <string name="title_activity_maps">Map</string>
    <string name="header_about">ABOUT</string>
    <string name="title_activity_maps2">Map</string>
    <!-- End Informasi Alert -->


</resources>
